# I4N

./: .gitignore  README.md  pyproject.toml
config/: settings.py
public/: apps.py  models.py  urls.py  views.py
public/migrations/: 0001_initial.py
static/css/: style.css
static/js/: main.js
templates/: base.html
templates/public/: home.html  homepage.html  wypowiedzi.html
templates/public/components/: statement_card.html
verification/: admin.py  models.py
verification/management/commands/: load_mock_data.py
verification/migrations/: 0001_initial.py
